fix: fixed multiple active state problem and scroll top shifting

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+	--header-height: 100px;
+}
+
 *,
 *::before,
 *::after {
@@ -9,12 +13,16 @@
 html {
 	font-size: calc(1rem + 0.5vw);
 	font-family: sans-serif;
-	scroll-behavior: smooth;
+
 }
 
 body {
 	background: linear-gradient(to right, purple, blue);
 	color: white;
+}
+
+p {
+	line-height: 1.5rem;
 }
 
 main,
@@ -31,7 +39,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	width: 100vw;
-	height: 100px;
+	height: var(--header-height);
 	background: white;
 	color: black;
 	position: fixed;
@@ -69,6 +77,7 @@ button.nav-btn:hover {
 }
 
 section {
+	scroll-margin-top: var(--header-height);
 	padding: 40px;
 	border-radius: 25px;
 	transition: all 0.3s;
